# C-memory-allocator

./: .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md
page_routines/: CMakeLists.txt  page_routines.c  page_routines.h  page_routines_test.c  page_routines_test.h  unix.c  windows.c
src/: CMakeLists.txt  main.c  mem.c  mem.h  mem_debug.c  mem_internals.h  tests.c  tests.h
tester/: CMakeLists.txt  Makefile  _free.c  alloc_region.c  find_good_or_last.c  grow_heap.c  heap_init.c  memalloc.c  test.h
tester/src/: test_utils.c  test_utils.h
tester/tests/: alloc_region.c  find_good_or_last.c  heap_init.c  split_if_too_big.c  try_merge_with_next.c
